<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/containerProfile"
            android:layout_width="265dp"
            android:layout_height="257dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/card_shape" />

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:elevation="1dp"
            android:backgroundTint="#fff"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:cardCornerRadius="100dp">
            <View
                android:id="@+id/profilePict"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/avatar_sample" />
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:layout_marginTop="50dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:id="@+id/fullNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fullName"
                android:padding="10dp"
                android:textSize="20dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/lunar"/>
            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:padding="10dp"
                android:textSize="20dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!--    <androidx.cardview.widget.CardView-->
    <!--        android:layout_marginTop="50dp"-->
    <!--        android:layout_width="300dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_gravity="end">-->
    <!--        <LinearLayout-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:orientation="vertical">-->


    <!--            <TextView-->
    <!--                android:id="@+id/emailTextView"-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_marginTop="30dp"-->
    <!--                android:layout_marginEnd="30dp"-->
    <!--                android:textAlignment="textEnd"-->
    <!--                android:text="@string/email"-->
    <!--                android:textSize="20dp"/>-->
    <!--            -->
    <!--        </LinearLayout>-->
    <!--        -->
    <!--    </androidx.cardview.widget.CardView>-->
    <Button
        android:layout_marginTop="110dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/upgrade"/>

</LinearLayout>